移除本地 Creator 登录流程
